overflow bug

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     height: 100dvh;
     font-family: Roboto, Arial, Helvetica, sans-serif;
     color: #212121;
+    overflow: hidden;
 }
 
 .bg {
@@ -108,6 +109,8 @@
     left: 5vw;
     background: #00000070;
     border-radius: 30px 30px 0 0;
+    overflow-y: visible;
+    overflow-x: hidden;
 }
 
 .taskUl {
